Native/Test/KL/error-ternary-lvalue.out
error-ternary-lvalue.kl:8:4: error: assignment: the result of a ternary operation cannot be an l-value
